Issue-119: alignment account label (#28)

--- a/assets/scss/components/_header-bar.scss
+++ b/assets/scss/components/_header-bar.scss
@@ -310,6 +310,11 @@
     width: 107px;
   }
 
+  &__menu-toggle-label {
+    display: block;
+    text-align: left;
+  }
+
   @media print {
     display: none;
   }
